[tool.poetry]
name = "python-template"
version = "0.0.1"
description = "BareBone base Python Project with all standard development libs setup"
authors = ["Merlin Sewina <merlin.sewina@paradoxinteractive.com>"]
readme = "README.md"
packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "3.9^"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
